--- a/style.css
+++ b/style.css
@@ -1,1 +1,13 @@
-aaaa
+#pudlo
+    {
+        width: 1000px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+ #tresc
+    {
+		background-color: lightgray;
+        float: left;
+        padding: 20px;
+        width: 640px;
+    }
