--- a/style.css
+++ b/style.css
@@ -10,3 +10,12 @@
         padding: 20px;
         width: 640px;
     }
+#linki
+    {
+        margin-left: auto;
+        margin-right: auto;
+		background-color: lightgray;
+        float: right;
+        padding: 20px;
+        width: 132px;
+    }
