--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
         margin-left: auto;
         margin-right: auto;
 		background-color: lightgray;
-        float: right;
+        float: left;
         padding: 20px;
         width: 132px;
     }
