--- a/style.css
+++ b/style.css
@@ -19,3 +19,12 @@
         padding: 20px;
         width: 132px;
     }
+    #zdiecie
+    {
+        margin-left: auto;
+        margin-right: auto;
+	    background-color: lightgray;
+        float: right;
+        padding: 20px;
+        width: 132px;
+    }
