--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     }
 #linki
     {
-        margin-left: auto;
+        margin-left: 30px;
         margin-right: auto;
 	background-color: lightgray;
         float: left;
